--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -34,3 +34,5 @@ jobs:
           git add .
           git commit -m 'Actualizar datos automáticamente' || echo "No hay cambios para hacer commit"
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Usa el token para el push
